--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color:#b7e4c7;
+    background-color:  #f8f7ff;
     text-align: center;
 
 }
@@ -9,6 +9,7 @@ body {
 
     font-family: 'Dancing Script', cursive;
     font-size: 200%;
+    margin-left: 20px;
     
 }
 
@@ -17,22 +18,96 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .nav-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+
     color: orangered;
     list-style-type:none;
     font-family: 'Roboto', sans-serif;
     padding: 0%;
+
 }
 
+.nav-list li {
+    margin: 0 8px;
+    padding: 5px ;
+    background-color: #eddcd2;
+    border-radius: 3px;
+
+
+}
+.nav-list li:hover {
+    background-color: #ddbea9;
+
+}
+
+
 .nav-list li a {
-    color: orangered;
+    color: #cb997e;
     text-decoration: none;
 }
 
+
+.services {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
+
+    margin-bottom: 10px;
+}
+
+.servicesItems {
+    width: 33%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.servicesItems img {
+    width: 80%;
+    height: auto;
+}
+
+.aboutMe {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+section {
+    min-height: 80vh;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.formItem {
+    margin: 5px;
+}
 footer {
-    background-color: #74c69d;
+    background-color: #b7b7a4;
     width: 100%;
     padding: 10px;
-    position: absolute;
     bottom: 0;
+    color: palevioletred;
+
+    font-family: 'Dancing Script', cursive;
+    font-size: 20px;
 }
