--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body {
     background-color:  #f8f7ff;
     text-align: center;
-
 }
 
 .title {
@@ -10,7 +9,6 @@ body {
     font-family: 'Dancing Script', cursive;
     font-size: 200%;
     margin-left: 20px;
-    
 }
 
 .paragraph {
@@ -41,42 +39,27 @@ nav {
 .nav-list li {
     margin: 0 8px;
     padding: 5px ;
-    background-color: #eddcd2;
-    border-radius: 3px;
-
-
 }
+
 .nav-list li:hover {
     background-color: #ddbea9;
-
 }
-
 
 .nav-list li a {
     color: #cb997e;
     text-decoration: none;
 }
 
-
 .services {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: flex-start;
-
-    margin-bottom: 10px;
-}
-
-.servicesItems {
-    width: 33%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 20px;
 }
 
 .servicesItems img {
-    width: 80%;
+    width: 100%;
     height: auto;
 }
 
@@ -110,4 +93,20 @@ footer {
 
     font-family: 'Dancing Script', cursive;
     font-size: 20px;
+}
+
+@media (max-width: 768px) {
+    .nav-list {
+        flex-direction: column;
+    }
+
+    .nav-list li {
+        margin: 0;
+        padding: 0;
+    }
+
+    .services {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(5, 1fr);
+    }
 }
